<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Who is Spy</string>
    <string name="main_activity">main activity</string>
    <string name="game_activity">game activity</string>
    <string name="action_settings">Settings</string>
    
    <string name="major_name">Major Name</string>
    <string name="spy_name">Spy Name</string>
    <string name="start_game">Start Game</string>
    
    <string name="spy_num">Number of Spy</string>
    <string name="multi_facial_num">Number of Multi-facial</string>
    <string name="all_players">All players</string>
    <string name="player_name">Player\'s name</string>
    <string name="default_all_players_num">6</string>
    <string name="pick_character_title">Your character: </string>
    <string name="pick_character_msg">Please deliver the phone to next player: </string>
    <string name="gaming_title">Confirm to kill this player!</string>
    <string name="gaming_msg">Are you sure you want to kill him?</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_game_start">Game Starts!</string>
    <string name="deliver_to_first_player">Please deliver the phone to:</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="play_another_around">Play Another Around</string>
    <string name="return_to_settings">Return Settinss</string>
    <string name="major">Civilian</string>
    <string name="spy">Spy</string>
    <string name="multi_face">Multi-face</string>
    <string name="i0">== 0 ==</string>
    <string name="i1">== 1 ==</string>
    <string name="i2">== 2 ==</string>
    <string name="i3">== 3 ==</string>
    <string name="i4">== 4 ==</string>
    <string name="i5">== 5 ==</string>
    <string name="i6">== 6 ==</string>
    <string name="i7">== 7 ==</string>
    
    <!-- Warning info -->
    <string name="warning_must_pick_one_special_character">You must choose one special character!</string>
    <string name="warning_pick_too_many_special_characters">You choose too many special characters!</string>
    <string name="warning_character_is_empty">You must set character</string>
    <string name="warning_special_character_is_same_with_normal">You must set different identifier for special character</string>
</resources>
